fix profile z-index

--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -18,4 +18,5 @@
   margin-top: -64px;
   padding-top: 8px;
   padding-bottom: 8px;
+  z-index: 10;
 }
